--- a/package.json
+++ b/package.json
@@ -135,5 +135,15 @@
     "presets": [
       "react-app"
     ]
+  },
+  "plugins": [
+    ["import", {
+      "libraryName": "antd",
+      "libraryDirectory": "es",
+      "style": true
+    }]
+  ],
+  "devDependencies": {
+    "babel-plugin-import": "^1.12.1"
   }
 }
