--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "customize-cra": "^0.6.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "echarts": "^4.2.1",
@@ -50,6 +51,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-app-rewired": "^2.1.3",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "resolve": "1.10.0",
